# SPARK

./: .gitignore  README.md  meta.json  pyproject.toml
.github/: copilot-instructions.md
configs/: config.yaml  data.yaml  model.yaml  trainer.yaml
configs/data/: default.yaml  log_trans.yaml  original.yaml
configs/experiments/: default.yaml  test.yaml
configs/model/: default.yaml  width128_depth4.yaml
configs/optimizer/: adamw.yaml
configs/trainer/: debug.yaml  default.yaml
docs/: 数据预处理.md  模型架构.md
script/: data_processed.py  train.py
spark/: __init__.py  predict.py
spark/data/: __init__.py  collator.py  config.py  datamodule.py  dataset.py
spark/models/: __init__.py  architecture.py  losses.py  module.py
spark/models/components/: __init__.py  attention.py
spark/utils/: masking.py  metrics.py
src/: __init__.py  predict.py
src/data/: __init__.py  collator.py  config.py  datamodule.py  dataset.py  loader.py
src/models/: architecture.py  losses.py  module.py
src/models/components/: attention.py  embeddings.py  heads.py  input_layer.py
src/utils/: __init__.py  masking.py
tests/: conftest.py  test_architecture.py  test_collator.py  test_components.py  test_datamodule.py  test_dataset.py  test_losses.py  test_masking.py  test_metrics.py  test_module.py  test_predict.py
