[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning",
    "pandas",
    "pyarrow",
    "torch",
    "wandb",
    "loguru",
    "einops",
    "rich",
]

[dependency-groups]
dev = [
    "pytest",
    "huggingface-hub",
    "ipykernel",
    "jupyter",
    "jupyterlab",
    "matplotlib",
    "seaborn",
]
